0.756_01 (12.31.2009) - John Siracusa <siracusa@gmail.com>

    * TODO: Savepoints?

0.756 (12.31.2009) - John Siracusa <siracusa@gmail.com>

    * Support for Rose::DB::Object 0.785.
    * Made fork- and thread-safe.
    * Updated mysql_enable_utf8() to run "SET NAMES utf8" id a database
      handle already exists.
    * Updated the various validate_*_keywords() methods to no longer accept
      anything that "looks like a function call."  This was done to avoid 
      possible SQL injection attacks, and because the now-pervasive support
      for scalar-reference literals in Rose::DB::Object obviates the need 
      for such permissive SQL inlining.  To restore the old behavior, use
      the default_keyword_function_calls() class method or the 
      keyword_function_calls() object method.

0.755 (10.16.2009) - John Siracusa <siracusa@gmail.com>

    * Fixed a bug in Rose::DB::Oracle that caused the port to be omitted
      from the DSN.  (Reported by llama)
    * Updated eval blocks to avoid stomping on $@ from an outer scope.

0.754 (09.14.2009) - John Siracusa <siracusa@gmail.com>

    * Removed outdated warning about Oracle support.
    * Clarified the return value and error handling for do_transaction().

0.753 (07.09.2009) - John Siracusa <siracusa@gmail.com>

    * Detect enum-like columns in PostgreSQL.  (RT 46214)
    * Added support for the "sslmode" DSN option for PostgreSQL.
      (Reported by foudfou)

0.752 (05.08.2009) - John Siracusa <siracusa@gmail.com>

    * Added workaround for the lack of getpwuid() on Windows.
    * SQLite column and table names are now properly unquoted when
      necessary.  (RT 45836)
    * Indicate that MySQL 5.0.45 and later supports selecting from
      a subselect.

0.751 (04.19.2009) - John Siracusa <siracusa@gmail.com>

    * Worked around a mod_perl 2 issue related to PerlOptions +Parent
      http://bit.ly/160jLN (Reported by Anton)
    * Updated test suite to consider DBD::SQLite 1.19+ non-broken.
